# AI_engineering_bootcamp

./: Makefile  docker-compose.yml  pyproject.toml
apps/api/: pyproject.toml
apps/api/src/api/: app.py
apps/api/src/api/agents/: agents.py  retrieval_generation.py
apps/api/src/api/agents/prompts/: retrieval_generation.yaml
apps/api/src/api/agents/utils/: prompt_management.py
apps/api/src/api/api/: endpoints.py  models.py
apps/chatbot_ui/: pyproject.toml
apps/chatbot_ui/src/chatbot_ui/: app.py
apps/chatbot_ui/src/chatbot_ui/core/: config.py
apps/evals/: evals_retriever.py
notebooks/prerequisites/: 01-llm-apis.ipynb
notebooks/week_1/: 01-explore-amazon-dataset.ipynb  02-RAG-preprocessing-items.ipynb  03-RAG-pipeline.ipynb  04-Observability-foundations.ipynb  05-RAG-Eval_dataset.ipynb  06-RAG-evals.ipynb
notebooks/week_2/: 01-structured_Outputs-Intro.ipynb  03-hybrid_Search.ipynb  04-Reranking.ipynb  05-prompt_management.ipynb  structured_output_rag_pipeline.ipynb
