[project]
name = "ai-engineering-bootcamp-prerequisites"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "google-genai>=1.57.0",
    "groq>=1.0.0",
    "ipykernel>=7.1.0",
    "langsmith>=0.9.3",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.18.0",
    "streamlit>=1.52.2",
]

[tool.uv.workspace]
members = ["apps/api", "apps/chatbot_ui"]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "cohere>=7.0.5",
    "langchain-community>=0.4.0,<0.4.2",
    "langchain-google-vertexai>=3.2.4",
    "langchain-openai>=1.1.9",
    "langsmith>=0.9.3",
    "matplotlib>=3.11.0",
    "openai>=2.15.0",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
]
